force-app/main/default/objects/NST__c/NST__c.object-meta.xml
<CustomObject>
    <label>NST</label>
    <nameField>
        <label>NST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NST</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>