force-app/main/default/objects/NST__c/fields/Cabang__c.field-meta.xml
<CustomField>
    <fullName>Cabang__c</fullName>
    <label>Kode Cabang</label>
    <length>10</length>
    <type>Text</type>
</CustomField>