force-app/main/default/objects/NST__c/fields/Config_Level__c.field-meta.xml
<CustomField>
    <fullName>Config_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Del] Config Level</label>
    <referenceTo>Config_Level__c</referenceTo>
    <relationshipLabel>NSTs</relationshipLabel>
    <relationshipName>NSTs</relationshipName>
    <type>Lookup</type>
</CustomField>