force-app/main/default/objects/NST__c/fields/Level_Formula__c.field-meta.xml
<CustomField>
    <fullName>Level_Formula__c</fullName>
    <formula>Config_Level__r.Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>