force-app/main/default/objects/NST__c/fields/NST_Type__c.field-meta.xml
<CustomField>
    <fullName>NST_Type__c</fullName>
    <label>NST Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualitative</fullName>
            </value>
            <value>
                <fullName>Quantitative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>