force-app/main/default/objects/NST__c/fields/Quadrant__c.field-meta.xml
<CustomField>
    <fullName>Quadrant__c</fullName>
    <label>Quadrant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I - Green</fullName>
            </value>
            <value>
                <fullName>II - Green</fullName>
            </value>
            <value>
                <fullName>II - Yellow</fullName>
            </value>
            <value>
                <fullName>III - Yellow</fullName>
            </value>
            <value>
                <fullName>III - Red</fullName>
            </value>
            <value>
                <fullName>IV - Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>