force-app/main/default/objects/NST__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cabang__c</columns>
    <columns>Quadrant__c</columns>
    <columns>NAME</columns>
    <columns>M_C__c</columns>
    <columns>Level_Formula__c</columns>
    <columns>NST_Type__c</columns>
    <columns>Job_title_code__c</columns>
    <columns>WorkLocation_code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cabang__c</field>
        <operation>equals</operation>
        <value>All</value>
    </filters>
    <filters>
        <field>Quadrant__c</field>
        <operation>equals</operation>
        <value>I - Green</value>
    </filters>
    <filters>
        <field>M_C__c</field>
        <operation>contains</operation>
        <value>M - Marketing,M&amp;C - Marketing &amp; Credit</value>
    </filters>
    <label>All</label>
</ListView>